--- a/src/objects/Sobre/styles.css
+++ b/src/objects/Sobre/styles.css
@@ -1,4 +1,4 @@
-.action {
+.sobre {
   font-weight: bold;
   font-size: 14px;
   color: #707070;
@@ -6,4 +6,3 @@
   text-decoration: none;
   text-transform: uppercase;
 }
-
